welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value get
  if (get couleurSol()==Color.green){
      ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (get couleurSol()==Color.green){
  ^