welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if (get couleurSol()==Color.green){
    return true
  }
    // Write your code here
}